buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.43-beta'
    id 'dev.ithundxr.silk' version '1.0.1'
    id 'me.modmuss50.mod-publish-plugin' version '1.1.0'
}

group = mod_group_id
version = minecraft_version + "-" +mod_version

String gitHash = calculateGitHash()
String changelogText = silk.getChangelog()

base {
    archivesName = mod_name
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)


neoForge {

    version = project.neo_version

    accessTransformers = project.files("src/main/resources/META-INF/accesstransformer.cfg")

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }


        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.INFO
        }
    }
    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {

    flatDir {
        dir 'libs'
    }


    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }

    maven {
        name "igleeRepoReleases"
        url "https://maven.iglee.fr/releases"
    }
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }

}

dependencies {

    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    implementation "fr.iglee42:IgleeLib:${minecraft_version}-${lib_version}"

    runtimeOnly "curse.maven:atlasviewer-633577:6088094"
    runtimeOnly "curse.maven:configured-457570:7276577"

    implementation "curse.maven:just-dire-things-1002348:7463040"
    implementation "curse.maven:gag-694962:7261542"
    implementation "curse.maven:time-in-a-bottle-895919:7555622"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            lib_version: lib_version,
            lib_version_range: lib_version_range
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata

neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

publishMods {
    file = tasks.jar.archiveFile
    displayName = "$mod_name $mod_version for mc$minecraft_version"
    version = project.version
    changelog = silk.changelog
    type = STABLE
    modLoaders.add("neoforge")
    dryRun = providers.environmentVariable("DRY_RUN").map { it == "true" }.orElse(false).get()

    def modrinthProjectId = providers.gradleProperty("publish_modrinth_project_id").orNull
    if (modrinthProjectId) {
        modrinth {
            accessToken = providers.environmentVariable("MODRINTH_TOKEN")
            projectId = modrinthProjectId
            minecraftVersions.add(minecraft_version)
        }
    }

    def curseforgeProjectId = providers.gradleProperty("publish_curseforge_project_id").orNull
    if (curseforgeProjectId) {
        curseforge {
            accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
            projectId = curseforgeProjectId
            projectSlug = providers.gradleProperty("publish_curseforge_project_slug").orNull
            minecraftVersions.add(minecraft_version)
            changelogType = "markdown"
            clientRequired = true
            serverRequired = true
        }
    }

    def githubRepository = providers.gradleProperty("publish_github_repository").orNull
    if (githubRepository) {
        github {
            accessToken = providers.environmentVariable("GITHUB_TOKEN")
            repository = githubRepository
            commitish = gitHash
            tagName = "$mod_version-$minecraft_version"
            file.unset()
            file.unsetConvention()
            allowEmptyFiles = true
        }
    }

    def discordContent = changelogText.length() > 4000 ? "Changelog is too long, check it on Modrinth." : changelogText

    discord {
        webhookUrl = providers.environmentVariable("DISCORD_WEBHOOK")
        dryRunWebhookUrl = providers.environmentVariable("DISCORD_WEBHOOK_DRY_RUN")
        content = """
                # $mod_name | $mod_version

                $discordContent
            """.stripIndent()

        style {
            link = "BUTTON"
            look = "MODERN"
            thumbnailUrl = "https://cdn.modrinth.com/data/hSSqdyU1/e7229e03d0795915092cdab361ee4406e0b27153_96.webp"
            color = "curseforge"

        }
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from(components.java)
        }
    }
    repositories {
        maven {
            name = 'igleeRepo'
            url = providers.gradleProperty("publish_maven_repository_url").orNull
            credentials {
                username = providers.environmentVariable("MAVEN_USERNAME").orNull
                password = providers.environmentVariable("MAVEN_PASSWORD").orNull
            }
            authentication {
                basic(BasicAuthentication)
            }
        }
    }
}


String calculateGitHash() {
    try {
        ExecOutput output = providers.exec {
            commandLine("git", "rev-parse", "HEAD")
        }
        return output.standardOutput.asText.get().trim()
    } catch (Throwable ignored) {
        return "unknown"
    }
}